--- a/skin/frontend/alexdress/default/css/styles.css
+++ b/skin/frontend/alexdress/default/css/styles.css
@@ -7347,6 +7347,11 @@ p.product-name a:hover {
     width: 100%;
   }
 }
+/* line 1041, ../scss/module/_catalog-product.scss */
+.zoomContainer {
+  z-index: 10;
+}
+
 /* ============================================ *
  * Catalog - MSRP MAP Popup
  * ============================================ */
