--- a/skin/frontend/alexdress/default/scss/module/_catalog-product.scss
+++ b/skin/frontend/alexdress/default/scss/module/_catalog-product.scss
@@ -1037,3 +1037,7 @@
 }
 
 }
+
+.zoomContainer{
+	z-index:10;
+}
